--- a/packages/ws-core/package.json
+++ b/packages/ws-core/package.json
@@ -2,7 +2,8 @@
   "name": "@tellme/ws-core",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "dev": "npm run build --workspace=@tellme/ws-core", 
     "devw": "powershell -Command \"Remove-Item -Recurse -Force ./dist\" && npm run build --workspace=@tellme/ws-core",
