[EDIT] - all abstract dto have become validator, [FIX] - remove content-length and transfer-encoding in proxy.forward (ws-common), catch axios error and throw httpexception

--- a/apps/cerberus/.env.example
+++ b/apps/cerberus/.env.example
@@ -3,6 +3,9 @@ SERVICE_PROTOCOL="http"
 ####### USER: CERBERUS
 CERBERUS_HOST=127.0.0.1
 CERBERUS_PORT=3001
+####### AUTH SERVICE: ATLAS
+ATLAS_HOST=127.0.0.1
+ATLAS_PORT=3001
 ####### Config redis 
 REDIS_CERBERUS_HOST="redis://Cerberus:root@localhost:6379/0"
 ################################### JWT
