--- a/packages/ws-common/package.json
+++ b/packages/ws-common/package.json
@@ -17,7 +17,16 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@nestjs/common": "^11.1.6",
+    "@nestjs/core": "^11.1.6",
+    "axios": "^1.11.0",
     "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.2"
+    "class-validator": "^0.14.2",
+    "ioredis": "^5.7.0"
+  },
+  "devDependencies": {
+    "@types/express": "^5.0.3",
+    "@types/node": "^22.18.1",
+    "typescript": "^5.9.2"
   }
 }
