--- a/packages/ws-core/package.json
+++ b/packages/ws-core/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "dev": "npm run build --workspace=@tellme/ws-core", 
+    "dev": "npm run build --workspace=@tellme/ws-core",
     "devw": "powershell -Command \"Remove-Item -Recurse -Force ./dist\" && npm run build --workspace=@tellme/ws-core",
     "devl": "rm -r ./dist/ && npm run build --workspace=@tellme/ws-core",
     "build": "tsc",
@@ -15,5 +15,26 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs"
+  "type": "commonjs",
+  "devDependencies": {
+    "@types/express": "^5.0.3",
+    "@types/ioredis": "^4.28.10",
+    "@types/node": "^22.18.1",
+    "@types/passport-jwt": "^4.0.1",
+    "@types/path-to-regexp": "^1.0.29",
+    "typescript": "^5.9.2"
+  },
+  "dependencies": {
+    "@nestjs/common": "^11.1.6",
+    "@nestjs/core": "^11.1.6",
+    "@nestjs/passport": "^11.0.5",
+    "axios": "^1.11.0",
+    "express": "^5.1.0",
+    "ioredis": "^5.7.0",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
+    "path-to-regexp": "^8.3.0",
+    "rxjs": "^7.8.2",
+    "snowflake-id": "^1.1.0"
+  }
 }
