--- a/apps/atlas/package.json
+++ b/apps/atlas/package.json
@@ -22,6 +22,9 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@tellme/ws-core": "^1.0.0",
+    "@tellme/ws-common": "^1.0.0",
+    "@tellme/ws-db": "^1.0.0",
     "@nestjs/common": "^11.1.6",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.1.6",
