--- a/packages/ws-common/package.json
+++ b/packages/ws-common/package.json
@@ -17,6 +17,7 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@tellme/ws-core": "^1.0.0",
     "@nestjs/common": "^11.1.6",
     "@nestjs/core": "^11.1.6",
     "axios": "^1.11.0",
